2004-12-02  Laurent Belmonte  <laurent.belmonte@aliacom.fr>

	updated monkey canvas, maybe performance gain
	waiting for feedback ..
	* src/view/monkey-canvas.c: (monkey_canvas_get_type),
	(monkey_canvas_configure), (monkey_canvas_scale_image_ghfunc),
	(monkey_canvas_expose), (monkey_canvas_create_block_from_image),
	(monkey_canvas_create_block), (monkey_canvas_load_image_from_path),
	(create_pixbuf_svg), (monkey_canvas_append_layer),
	(monkey_canvas_new_layer), (monkey_canvas_add_block),
	(monkey_canvas_move_block), (monkey_canvas_remove_block),
	(monkey_canvas_unref_block), (layer_draw), (block_draw),
	(monkey_canvas_clear), (monkey_canvas_paint):

2004-11-09  Hasbullah BIn Pit <sebol@my-penguin.org>

        * configure.in: Added 'ms' (Malay) to ALL_LINGUA

2004-09-27  Laurent Belmonte  <laurent.belmonte@aliacom.fr>

	update clock to add mb prefix, hope fix the compilation
	on MacOS X
	added ru.po made by <zcd043@sectorb.msk.ru>

	* po/ru.po:
	* src/net/game.c: (update_client), (network_game_start),
	(network_game_instance_init):
	* src/ui/game-1-player.c: (game_1_player_new), (get_time),
	(time_paused), (time_unpaused), (time_init):
	* src/ui/game-2-player.c: (game_2_player_new), (get_time),
	(time_paused), (time_unpaused), (time_init):
	* src/ui/game-network-player.c: (game_network_player_new),
	(get_time), (time_paused), (time_unpaused), (time_init):
	* src/util/clock.c: (mb_clock_instance_init), (mb_clock_finalize),
	(mb_clock_class_init), (mb_clock_get_type), (mb_clock_new),
	(mb_clock_start), (mb_clock_pause), (mb_clock_get_time):
	* src/util/clock.h:

2004-09-20  Laurent Belmonte  <laurent.belmonte@aliacom.fr>

        Russian translation updated by <zcd043@sectorb.msk.ru>
	fix missing translation in ui

	* configure.in:
	* po/POTFILES.in:
	* src/ui/keyboard-properties.c:
	* src/ui/ui-main.c: (about):
	* src/ui/ui-network-client.c: (ui_network_client_new):
	* src/ui/ui-network-server.c: (ui_network_server_new):
